完成消息返回

--- a/samples/Microsoft.Bot.Builder.Adapters.WeChat.Work.TestBot/appsettings.json
+++ b/samples/Microsoft.Bot.Builder.Adapters.WeChat.Work.TestBot/appsettings.json
@@ -3,7 +3,7 @@
   "MicrosoftAppPassword": "",
   "WeChatSettings": {
     "UploadTemporaryMedia": true,
-    "PassiveResponseMode": false,
+    "PassiveResponseMode": true,
     "Token": "K4nXu",
     "EncodingAESKey": "1CzTUVS1dIQCvDkYVFYLLjBDknmx8AVmDdHDVWP0GCn",
     "CorpId": "ww7f78b8efd38dc961",
