使用发送应用消息接口实现返回多条消息

--- a/samples/Microsoft.Bot.Builder.Adapters.WeChat.Work.TestBot/appsettings.json
+++ b/samples/Microsoft.Bot.Builder.Adapters.WeChat.Work.TestBot/appsettings.json
@@ -2,8 +2,9 @@
   "MicrosoftAppId": "",
   "MicrosoftAppPassword": "",
   "WeChatSettings": {
+    "AgentId": 1000002,
     "UploadTemporaryMedia": true,
-    "PassiveResponseMode": true,
+    "PassiveResponseMode": false,
     "Token": "K4nXu",
     "EncodingAESKey": "1CzTUVS1dIQCvDkYVFYLLjBDknmx8AVmDdHDVWP0GCn",
     "CorpId": "ww7f78b8efd38dc961",
